@@ -116,6 +116,12 @@ def test_webp(h, f):
 
 tests.append(test_webp)
 
+def test_exr(h, f):
+    if h.startswith(b'\x76\x2f\x31\x01'):
+        return 'exr'
+
+tests.append(test_exr)
+
 #--------------------#
 # Small test program #
 #--------------------#
